--- a/less/homePage.less
+++ b/less/homePage.less
@@ -9,7 +9,11 @@
   .headerTextAndButton {
     position: relative;
     top: 50vh;
-
+    //adjusted up a little to account for mobile browser bar
+    @media @phone {
+      top: 45vh;
+    }
+    //adjusted up a lot to prevent short viewport from pushing text out of header image
     @media @phoneLandscape {
       top: 10vh;
     }
@@ -19,7 +23,6 @@
 
     h1 {
       .font(@fontWeight: bold; @fontSize: 3rem; @fontColor: white);
-      //adds block border to white text for readability
       .blackLinedtext();
     }
 
